# spoonfeed

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: docker-image.yml
spoonfeed-server/: Cargo.toml
spoonfeed-server/config/: config.toml
spoonfeed-server/src/: config.rs  main.rs  routes.rs
