[package]
name = "spoonfeed-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
env_logger = "0.10.0"
include_dir = "0.7.3"
log = "0.4.19"
mime_guess = "2.0.4"
serde = { version = "1.0.164", features = ["derive"] }
tokio = { version = "1.29.0", features = ["full"] }
toml = "0.7.5"
